archivos_creados/parcialParser.java
// Generated from parcial.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class parcialParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, WS=2, PLUS=3, MINUS=4, MUL=5, DIV=6, MOD=7, POT=8, ASSIGN=9, INC=10, 
		LLLAVE=11, RLLAVE=12, CL=13, CR=14, LPAREN=15, RPAREN=16, LT=17, GT=18, 
		NEQ=19, IF=20, ELSE=21, FOR=22, RET=23, DEF=24, MAX=25, VAR_INT=26, VAR_FLOAT=27, 
		VAR_DOUBLE=28, VAR_CHAR=29, VAR_STR=30, VAR_VOID=31, STRUCT=32, COMMENT=33, 
		OUTPUT=34, INPUT=35, COMMA=36, NUMFLOAT=37, ID=38, NUM=39, STRING=40;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_decVar = 2, RULE_expr = 3, 
		RULE_cincoutStatement = 4, RULE_output = 5, RULE_input = 6, RULE_structDeclaration = 7, 
		RULE_structBody = 8, RULE_funcDeclaration = 9, RULE_paramList = 10, RULE_comentario = 11, 
		RULE_funcBody = 12, RULE_for = 13, RULE_forInit = 14, RULE_forCond = 15, 
		RULE_forUpdate = 16, RULE_ifStatement = 17, RULE_corcht = 18, RULE_sumatoria = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "decVar", "expr", "cincoutStatement", "output", 
			"input", "structDeclaration", "structBody", "funcDeclaration", "paramList", 
			"comentario", "funcBody", "for", "forInit", "forCond", "forUpdate", "ifStatement", 
			"corcht", "sumatoria"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sumatoria'", null, "'sum'", "'res'", "'mul'", "'div'", "'%'", 
			"'pot'", "'='", "'++'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'<'", 
			"'>'", "'<>'", "'if'", "'else'", "'for'", "'ret'", "'#def'", "'MAX'", 
			"':n'", "':nF'", "':nD'", "':Ch'", "':S'", "':V'", "'estruct'", null, 
			"'->'", "'<-'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "WS", "PLUS", "MINUS", "MUL", "DIV", "MOD", "POT", "ASSIGN", 
			"INC", "LLLAVE", "RLLAVE", "CL", "CR", "LPAREN", "RPAREN", "LT", "GT", 
			"NEQ", "IF", "ELSE", "FOR", "RET", "DEF", "MAX", "VAR_INT", "VAR_FLOAT", 
			"VAR_DOUBLE", "VAR_CHAR", "VAR_STR", "VAR_VOID", "STRUCT", "COMMENT", 
			"OUTPUT", "INPUT", "COMMA", "NUMFLOAT", "ID", "NUM", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "parcial.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public parcialParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				statement();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1027509092354L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DecVarContext decVar() {
			return getRuleContext(DecVarContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public FuncDeclarationContext funcDeclaration() {
			return getRuleContext(FuncDeclarationContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public CincoutStatementContext cincoutStatement() {
			return getRuleContext(CincoutStatementContext.class,0);
		}
		public ComentarioContext comentario() {
			return getRuleContext(ComentarioContext.class,0);
		}
		public SumatoriaContext sumatoria() {
			return getRuleContext(SumatoriaContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				decVar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				expr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				structDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				funcDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				for_();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				ifStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(51);
				cincoutStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(52);
				comentario();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(53);
				sumatoria();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecVarContext extends ParserRuleContext {
		public TerminalNode VAR_CHAR() { return getToken(parcialParser.VAR_CHAR, 0); }
		public List<TerminalNode> ID() { return getTokens(parcialParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(parcialParser.ID, i);
		}
		public List<CorchtContext> corcht() {
			return getRuleContexts(CorchtContext.class);
		}
		public CorchtContext corcht(int i) {
			return getRuleContext(CorchtContext.class,i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(parcialParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(parcialParser.ASSIGN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(parcialParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(parcialParser.STRING, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(parcialParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(parcialParser.COMMA, i);
		}
		public TerminalNode VAR_INT() { return getToken(parcialParser.VAR_INT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode VAR_FLOAT() { return getToken(parcialParser.VAR_FLOAT, 0); }
		public TerminalNode VAR_DOUBLE() { return getToken(parcialParser.VAR_DOUBLE, 0); }
		public DecVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterDecVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitDecVar(this);
		}
	}

	public final DecVarContext decVar() throws RecognitionException {
		DecVarContext _localctx = new DecVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decVar);
		int _la;
		try {
			int _alt;
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR_CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(VAR_CHAR);
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(57);
						match(ID);
						setState(59);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==CL) {
							{
							setState(58);
							corcht();
							}
						}

						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==ASSIGN) {
							{
							setState(61);
							match(ASSIGN);
							setState(62);
							match(STRING);
							}
						}

						setState(66);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
						case 1:
							{
							setState(65);
							match(COMMA);
							}
							break;
						}
						}
						} 
					}
					setState(72);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case VAR_INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(VAR_INT);
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(74);
						match(ID);
						setState(76);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==CL) {
							{
							setState(75);
							corcht();
							}
						}

						setState(80);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==ASSIGN) {
							{
							setState(78);
							match(ASSIGN);
							setState(79);
							expr(0);
							}
						}

						setState(83);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
						case 1:
							{
							setState(82);
							match(COMMA);
							}
							break;
						}
						}
						} 
					}
					setState(89);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;
			case VAR_FLOAT:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(VAR_FLOAT);
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(91);
						match(ID);
						setState(93);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==CL) {
							{
							setState(92);
							corcht();
							}
						}

						setState(97);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==ASSIGN) {
							{
							setState(95);
							match(ASSIGN);
							setState(96);
							expr(0);
							}
						}

						setState(100);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
						case 1:
							{
							setState(99);
							match(COMMA);
							}
							break;
						}
						}
						} 
					}
					setState(106);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				}
				}
				break;
			case VAR_DOUBLE:
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				match(VAR_DOUBLE);
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(108);
						match(ID);
						setState(110);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==CL) {
							{
							setState(109);
							corcht();
							}
						}

						setState(114);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==ASSIGN) {
							{
							setState(112);
							match(ASSIGN);
							setState(113);
							expr(0);
							}
						}

						setState(117);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
						case 1:
							{
							setState(116);
							match(COMMA);
							}
							break;
						}
						}
						} 
					}
					setState(123);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(parcialParser.LPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(parcialParser.RPAREN, 0); }
		public TerminalNode NUM() { return getToken(parcialParser.NUM, 0); }
		public TerminalNode NUMFLOAT() { return getToken(parcialParser.NUMFLOAT, 0); }
		public TerminalNode ID() { return getToken(parcialParser.ID, 0); }
		public SumatoriaContext sumatoria() {
			return getRuleContext(SumatoriaContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(parcialParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(parcialParser.MINUS, 0); }
		public TerminalNode MUL() { return getToken(parcialParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(parcialParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(parcialParser.MOD, 0); }
		public TerminalNode POT() { return getToken(parcialParser.POT, 0); }
		public TerminalNode LT() { return getToken(parcialParser.LT, 0); }
		public TerminalNode GT() { return getToken(parcialParser.GT, 0); }
		public TerminalNode NEQ() { return getToken(parcialParser.NEQ, 0); }
		public TerminalNode ASSIGN() { return getToken(parcialParser.ASSIGN, 0); }
		public TerminalNode INC() { return getToken(parcialParser.INC, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				{
				setState(127);
				match(LPAREN);
				setState(128);
				expr(0);
				setState(129);
				match(RPAREN);
				}
				break;
			case NUM:
				{
				setState(131);
				match(NUM);
				}
				break;
			case NUMFLOAT:
				{
				setState(132);
				match(NUMFLOAT);
				}
				break;
			case ID:
				{
				setState(133);
				match(ID);
				}
				break;
			case T__0:
				{
				setState(134);
				sumatoria();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(171);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(169);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(137);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(138);
						match(PLUS);
						setState(139);
						expr(17);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(140);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(141);
						match(MINUS);
						setState(142);
						expr(16);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(143);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(144);
						match(MUL);
						setState(145);
						expr(15);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(146);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(147);
						match(DIV);
						setState(148);
						expr(14);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(149);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(150);
						match(MOD);
						setState(151);
						expr(13);
						}
						break;
					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(152);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(153);
						match(POT);
						setState(154);
						expr(12);
						}
						break;
					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(155);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(156);
						match(LT);
						setState(157);
						expr(11);
						}
						break;
					case 8:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(158);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(159);
						match(GT);
						setState(160);
						expr(10);
						}
						break;
					case 9:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(161);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(162);
						match(NEQ);
						setState(163);
						expr(9);
						}
						break;
					case 10:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(164);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(165);
						match(ASSIGN);
						setState(166);
						expr(8);
						}
						break;
					case 11:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(167);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(168);
						match(INC);
						}
						break;
					}
					} 
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CincoutStatementContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(parcialParser.OUTPUT, 0); }
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public TerminalNode INPUT() { return getToken(parcialParser.INPUT, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public CincoutStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cincoutStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterCincoutStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitCincoutStatement(this);
		}
	}

	public final CincoutStatementContext cincoutStatement() throws RecognitionException {
		CincoutStatementContext _localctx = new CincoutStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cincoutStatement);
		try {
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OUTPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				match(OUTPUT);
				setState(175);
				output();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(INPUT);
				setState(177);
				input();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(parcialParser.STRING, 0); }
		public TerminalNode ID() { return getToken(parcialParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_output);
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				match(STRING);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				match(ID);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(182);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(parcialParser.ID, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof parcialListener ) ((parcialListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
